--- a/style.css
+++ b/style.css
@@ -33,3 +33,28 @@ section#telefone{
     background:url('./imagens/frame-iphone.png') no-repeat;
     
 }
+#tela{
+    position: relative;
+    top:80px ;
+    left:22px ;
+    width: 267px;
+    height: 471px;
+}
+section#redes-sociais img{
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.829);
+    box-sizing: border-box;
+}
+section#redes-sociais{
+    text-align: right ;
+    
+}
+    section#redes-sociais img:hover {
+        border: 2px solid rgba(255, 255, 255, 0.603);
+        transform: translate( -5px,5px);
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.555);
+        transition: transform .3s border 1seg; 
+    }
